- logs to /var/log
Changed files:
    mpd.conf -> 1.2

--- a/mpd.conf
+++ b/mpd.conf
@@ -9,8 +9,8 @@
 music_directory                 "/music"
 playlist_directory              "/var/lib/mpd/playlists"
 db_file                         "/var/lib/mpd/mpd.db"
-log_file                        "/var/lib/mpd/mpd.log"
-error_file                      "/var/lib/mpd/mpd.error"
+log_file                        "/var/log/mpd/mpd.log"
+error_file                      "/var/log/mpd/mpd.error"
 ################################################################
 
 
